--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,122 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+body{
+    overflow: hidden;
+    margin: 0%;
+    padding: 0%;
+  } 
+  
+  .form-hold{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    height: 100vh;
+    width: 100%;
   }
-  a:hover {
-    color: #747bff;
+  
+  .btn{
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+      
   }
-  button {
-    background-color: #f9f9f9;
+  
+  
+  .form-right-inner{
+     /* background-color: wheat; */
+     display: flex;
+     flex-direction: column;
+     margin-top: 50%;
+     /* height: 100%; */
+     
   }
-}
+  
+  .form-right-inner h1{
+  text-align: center;
+    font-size: 40px;
+    color: black;
+  }
+  
+  .form-right-inner h2{
+   text-align: center;
+   font-size: 20px;
+   color: black;
+  }
+  
+  
+  .form-right {
+    width: 54%;
+    height: 100vh;
+    /* background-image: url('/src/assets/plant.jpg'); */
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    color: white;  
+  }
+  
+  
+  
+  
+  /* FORM LEFT  */
+  .form-left{
+    width: 100%;
+  
+  }
+  
+   .form-container {
+      margin-top: 50px;
+      padding: 20px;
+      border-radius: 5px;
+      /* background-color: brown;   */
+      
+    }
+    
+    h2 {
+      text-align: center;
+      font-size: 40px;
+    }
+  
+    h3 {
+      text-align: center;
+      font-size: 15px;
+    }
+    
+    form {
+      display: flex;
+      flex-direction: column;
+      padding: 50px;
+      
+    }
+    
+    label {
+      margin-bottom: 5px;
+    }
+    
+    input {
+      display: flex;
+      justify-self: center;
+      width: 45%;
+      margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 15px;
+      
+    }
+    
+    button {
+      padding: 10px 60px;
+      border: none;
+      font-size: 15px;
+      color: white;
+      border: none; 
+      border-radius: 30px;
+      background-color: rgba(0, 255, 98, 0.678);
+      cursor: pointer;
+      
+    }
+    
+    .error {
+      color: red;
+      font-size: 12px;
+    }
+    
