--- a/src/index.css
+++ b/src/index.css
@@ -1,122 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
-body{
-    overflow: hidden;
-    margin: 0%;
-    padding: 0%;
-  } 
-  
-  .form-hold{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    height: 100vh;
-    width: 100%;
-  }
-  
-  .btn{
-      display: flex;
-      justify-content: center;
-      padding: 10px;
-      
-  }
-  
-  
-  .form-right-inner{
-     /* background-color: wheat; */
-     display: flex;
-     flex-direction: column;
-     margin-top: 50%;
-     /* height: 100%; */
-     
-  }
-  
-  .form-right-inner h1{
-  text-align: center;
-    font-size: 40px;
-    color: black;
-  }
-  
-  .form-right-inner h2{
-   text-align: center;
-   font-size: 20px;
-   color: black;
-  }
-  
-  
-  .form-right {
-    width: 54%;
-    height: 100vh;
-    /* background-image: url('/src/assets/plant.jpg'); */
-    background-size: cover;
-    background-position: center;
-    padding: 20px;
-    color: white;  
-  }
-  
-  
-  
-  
-  /* FORM LEFT  */
-  .form-left{
-    width: 100%;
-  
-  }
-  
-   .form-container {
-      margin-top: 50px;
-      padding: 20px;
-      border-radius: 5px;
-      /* background-color: brown;   */
-      
-    }
-    
-    h2 {
-      text-align: center;
-      font-size: 40px;
-    }
-  
-    h3 {
-      text-align: center;
-      font-size: 15px;
-    }
-    
-    form {
-      display: flex;
-      flex-direction: column;
-      padding: 50px;
-      
-    }
-    
-    label {
-      margin-bottom: 5px;
-    }
-    
-    input {
-      display: flex;
-      justify-self: center;
-      width: 45%;
-      margin-bottom: 10px;
-      padding: 8px;
-      border-radius: 15px;
-      
-    }
-    
-    button {
-      padding: 10px 60px;
-      border: none;
-      font-size: 15px;
-      color: white;
-      border: none; 
-      border-radius: 30px;
-      background-color: rgba(0, 255, 98, 0.678);
-      cursor: pointer;
-      
-    }
-    
-    .error {
-      color: red;
-      font-size: 12px;
-    }
-    
+body, #root{
+  margin: 0px;
+  padding: 0px;
+  height: 100vh;
+  font-family: 'DM Sans', sans-serif;
+  width: 100vw;
+}
