Added Page Not Found Screen and Prevented Side From showing on phones

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@ body, #root{
   font-family: 'DM Sans', sans-serif;
   width: 100vw;
 }
+
+/* By default this website is on darkmode */
+:root{
+  color:'white';
+  background-color: black;
+}
