--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ option:last-child{
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
+input:focus,textarea:focus{
+  outline: none;
+  border: none;
+}
 input::autofill{
   background: transparent;
 }
