--- a/src/pages/calls/call-page.css
+++ b/src/pages/calls/call-page.css
@@ -44,10 +44,21 @@
 
 .str-video__video{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     background-color: theme(accentColor.tertiary);
 }
 
 
 .str-video__participant-view--no-video {
     width: 100%;
+}
+
+.str-video__speaker-layout{
+    .str-video__participant-view{
+
+    }
+    .str-video__video{
+        object-fit: cover;
+    }
 }
