--- a/src/index.css
+++ b/src/index.css
@@ -141,10 +141,9 @@ input::placeholder{
 
 /* Custom calendar styles */
 .custom-calendar {
-  width: 570px;
+  /* width: 570px; */
   border-radius: 8px;
   overflow: hidden;
-  background-color: var(--tertiary);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
