--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ input::placeholder{
 
 
 
-/* Custom calendar styles */
+Custom calendar styles
 .custom-calendar {
   /* width: 570px; */
   border-radius: 8px;
