updated style of calender

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ input::placeholder{
 
 
 
-Custom calendar styles
+/* Custom calendar styles
 .custom-calendar {
   /* width: 570px; */
   border-radius: 8px;
@@ -175,6 +175,6 @@ Custom calendar styles
   padding: 10px;
   font-size: 1rem;
   color: #333;
-}
+} */
 
 
